--- a/src/Sekiban.Pure.NUnit/Sekiban.Pure.NUnit.csproj
+++ b/src/Sekiban.Pure.NUnit/Sekiban.Pure.NUnit.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Pure.NUnit</PackageId>
-        <Version>1.0.0-preview10</Version>
+        <Version>1.0.0-preview11</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Pure Event Sourcing Framework NUnit Integration</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>1.0.0-preview10</PackageVersion>
-        <Description>Pure Event Sourcing Framework NUnit Integration</Description>
+        <PackageVersion>1.0.0-preview11</PackageVersion>
+        <Description>Read model initial release</Description>
         <AssemblyName>Sekiban.Pure.NUnit</AssemblyName>
         <RootNamespace>Sekiban.Pure.NUnit</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -35,7 +35,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
-        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.0-preview10"/>
+        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.0-preview11"/>
     </ItemGroup>
 
 </Project>
