--- a/src/Sekiban.Pure.Orleans/Sekiban.Pure.Orleans.csproj
+++ b/src/Sekiban.Pure.Orleans/Sekiban.Pure.Orleans.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Pure.Orleans</PackageId>
-        <Version>1.0.0-preview10</Version>
+        <Version>1.0.0-preview11</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Pure Event Sourcing Framework Orleans Integration</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>1.0.0-preview10</PackageVersion>
-        <Description>Pure Event Sourcing Framework Orleans Integration</Description>
+        <PackageVersion>1.0.0-preview11</PackageVersion>
+        <Description>Read model initial release</Description>
         <AssemblyName>Sekiban.Pure.Orleans</AssemblyName>
         <RootNamespace>Sekiban.Pure.Orleans</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -31,7 +31,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
-        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.0-preview10"/>
+        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.0-preview11"/>
     </ItemGroup>
 
     <ItemGroup>
