--- a/src/Sekiban.Pure.Postgres/Sekiban.Pure.Postgres.csproj
+++ b/src/Sekiban.Pure.Postgres/Sekiban.Pure.Postgres.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Pure.Postgres</PackageId>
-        <Version>1.0.0-preview10</Version>
+        <Version>1.0.0-preview11</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Pure Event Sourcing Framework PostgreSQL Integration</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>1.0.0-preview10</PackageVersion>
-        <Description>Pure Event Sourcing Framework PostgreSQL Integration</Description>
+        <PackageVersion>1.0.0-preview11</PackageVersion>
+        <Description>Read model initial release</Description>
         <AssemblyName>Sekiban.Pure.Postgres</AssemblyName>
         <RootNamespace>Sekiban.Pure.Postgres</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -33,7 +33,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.2"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.2"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
-        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.0-preview10"/>
+        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.0-preview11"/>
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.2"/>
         <PackageReference Include="Microsoft.Sbom.Targets" Version="3.1.0">
             <PrivateAssets>all</PrivateAssets>
