--- a/src/Sekiban.Pure.ReadModel/Sekiban.Pure.ReadModel.csproj
+++ b/src/Sekiban.Pure.ReadModel/Sekiban.Pure.ReadModel.csproj
@@ -5,10 +5,32 @@
         <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>Sekiban.Pure.ReadModel</PackageId>
+        <Version>1.0.0-preview11</Version>
+        <Authors>J-Tech Group</Authors>
+        <Company>J-Tech-Japan</Company>
+        <PackageDescription>Sekiban - Pure Event Sourcing Framework Orleans Integration</PackageDescription>
+        <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
+        <PackageVersion>1.0.0-preview11</PackageVersion>
+        <Description>Read model initial release</Description>
+        <AssemblyName>Sekiban.Pure.ReadModel</AssemblyName>
+        <RootNamespace>Sekiban.Pure.ReadModel</RootNamespace>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GenerateSBOM>true</GenerateSBOM>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Sekiban.Pure\Sekiban.Pure.csproj" />
+        <PackageReference Include="Sekiban.Pure" Version="1.0.0-preview11"/>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
+        <PackageReference Include="Microsoft.Sbom.Targets" Version="3.1.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
