--- a/src/Sekiban.Pure.SourceGenerator/Sekiban.Pure.SourceGenerator.csproj
+++ b/src/Sekiban.Pure.SourceGenerator/Sekiban.Pure.SourceGenerator.csproj
@@ -4,13 +4,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sekiban.Pure.SourceGenerator</PackageId>
-        <Version>1.0.0-preview10</Version>
+        <Version>1.0.0-preview11</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Pure Event Sourcing Framework Source Generator</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>1.0.0-preview10</PackageVersion>
-        <Description>Pure Event Sourcing Framework Source Generator</Description>
+        <PackageVersion>1.0.0-preview11</PackageVersion>
+        <Description>Read model initial release</Description>
         <AssemblyName>Sekiban.Pure.SourceGenerator</AssemblyName>
         <RootNamespace>Sekiban.Pure.SourceGenerator</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
