--- a/src/Sekiban.Pure/Sekiban.Pure.csproj
+++ b/src/Sekiban.Pure/Sekiban.Pure.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Pure</PackageId>
-        <Version>1.0.0-preview10</Version>
+        <Version>1.0.0-preview11</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Pure Event Sourcing Framework</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>1.0.0-preview10</PackageVersion>
-        <Description>Pure Event Sourcing Framework</Description>
+        <PackageVersion>1.0.0-preview11</PackageVersion>
+        <Description>Read model initial release</Description>
         <AssemblyName>Sekiban.Pure</AssemblyName>
         <RootNamespace>Sekiban.Pure</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
