--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/OrleansSekiban.ApiService.csproj
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/OrleansSekiban.ApiService.csproj
@@ -13,20 +13,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.2.0" />
-    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.2.0" />
-    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.2.0" />
+    <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.2.1" />
+    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.2.1" />
+    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.1.2" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Persistence.Memory" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.1.2" />
     <PackageReference Include="OrleansDashboard" Version="8.2.0" />
-    <PackageReference Include="Scalar.AspNetCore" Version="2.1.17" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.2.5" />
     <PackageReference Include="Microsoft.Orleans.Streaming.AzureStorage" Version="9.1.2" />
-    <PackageReference Include="Sekiban.Pure.CosmosDb" Version="1.0.1-preview05" />
-    <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.1-preview05" />
-    <PackageReference Include="Sekiban.Pure.Postgres" Version="1.0.1-preview05" />
+    <PackageReference Include="Sekiban.Pure.CosmosDb" Version="1.0.1-preview06" />
+    <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.1-preview06" />
+    <PackageReference Include="Sekiban.Pure.Postgres" Version="1.0.1-preview06" />
   </ItemGroup>
 
 </Project>
