--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.ApiService/appsettings.json
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.ApiService/appsettings.json
@@ -2,7 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Azure.Core": "Warning",
+      "Azure.Identity": "Warning",
+      "Azure.Storage": "Warning"
     }
   },
   "AllowedHosts": "*"
