--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Domain/OrleansSekiban.Domain.csproj
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Domain/OrleansSekiban.Domain.csproj
@@ -10,8 +10,12 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Orleans.Server" Version="9.1.2" />
-      <PackageReference Include="Sekiban.Pure" Version="1.0.0-preview9" />
-      <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.0-preview9" />
+      <PackageReference Include="Sekiban.Pure" Version="1.0.1-preview07" />
+      <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.1-preview07" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ValueObjects\" />
     </ItemGroup>
 
 </Project>
