--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.ApiService/appsettings.json
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.ApiService/appsettings.json
@@ -5,7 +5,11 @@
       "Microsoft.AspNetCore": "Warning",
       "Azure.Core": "Warning",
       "Azure.Identity": "Warning",
-      "Azure.Storage": "Warning"
+      "Azure.Storage": "Warning",
+      "Azure.Messaging.EventHubs": "Warning",
+      "Orleans.Runtime": "Warning",
+      "Orleans.Streams": "Warning",
+      "Orleans.Streaming": "Warning"
     }
   },
   "AllowedHosts": "*"
