--- a/internalUsages/OrleansSekiban.ApiService/OrleansSekiban.ApiService.csproj
+++ b/internalUsages/OrleansSekiban.ApiService/OrleansSekiban.ApiService.csproj
@@ -21,9 +21,12 @@
     <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.1.2" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.2.0-preview1" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.1.2" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.Cosmos" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Persistence.Memory" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.1.2" />
+    <PackageReference Include="Microsoft.Orleans.Streaming.EventHubs" Version="9.1.2" />
     <PackageReference Include="OrleansDashboard" Version="8.2.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.1.17" />
     <PackageReference Include="Microsoft.Orleans.Streaming.AzureStorage" Version="9.1.2" />
