--- a/dcb/src/Sekiban.Dcb.Core/Sekiban.Dcb.Core.csproj
+++ b/dcb/src/Sekiban.Dcb.Core/Sekiban.Dcb.Core.csproj
@@ -26,6 +26,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
         <PackageReference Include="ResultBoxes" Version="0.3.31"/>
         <PackageReference Include="Sekiban.Dcb.Core.Model" Version="10.0.2-preview05" />
         <PackageReference Include="Microsoft.Sbom.Targets" Version="4.1.5">
